--- a/registration.xaml
+++ b/registration.xaml
@@ -33,5 +33,11 @@
         <TextBlock Text="Зарегистрированы?" FontSize="12" Grid.ColumnSpan="2" Margin="53,32,79,25" Grid.RowSpan="2" Grid.Row="5" Grid.Column="2"/>
         <TextBlock Text="Войти" FontSize="12" Grid.ColumnSpan="2" Margin="41,32,92,24" Grid.RowSpan="2" Grid.Row="5" Grid.Column="3" MouseLeftButtonDown="TextBlock_MouseLeftButtonDown"/>
         <Button x:Name="t2" Content="Зарегистрироваться" FontSize="12" Grid.Column="2" Grid.ColumnSpan="2" Margin="53,10,66,44" Grid.RowSpan="2" Grid.Row="6" Click="t2_Click"/>
+        <Image Source="C:\Users\student\Desktop\practic_lit\картинки\free-icon-user-1077063.png" Margin="28,21,28,48" Grid.RowSpan="2" Grid.Row="1" RenderTransformOrigin="1.521,-0.005" Grid.Column="1"/>
+        <Image Source="C:\Users\student\Desktop\practic_lit\картинки\free-icon-padlock-2575570.png" Margin="24,41,24,28" Grid.RowSpan="2" Grid.Row="4" Grid.Column="1"/>
+        <Image Source="C:\Users\student\Desktop\practic_lit\картинки\free-icon-padlock-2575570.png" Margin="24,34,24,35" Grid.RowSpan="2" Grid.Row="3" Grid.Column="1"/>
+        <Image Source="C:\Users\student\Desktop\practic_lit\картинки\free-icon-email-561127.png" Margin="10,27,11,41" Grid.RowSpan="2" Grid.Row="2" Grid.Column="1"/>
+        <Image Source="C:\Users\student\Desktop\practic_lit\картинки\free-icon-eye-158746.png" Margin="17,32,31,32" Grid.Row="3" Grid.Column="4" Grid.RowSpan="2"/>
+        <Image Source="C:\Users\student\Desktop\practic_lit\картинки\free-icon-eye-158746.png" Margin="17,37,31,28" Grid.Row="4" Grid.Column="4" Grid.RowSpan="2" RenderTransformOrigin="0.504,2.051"/>
     </Grid>
 </Window>
